# ConstEnumUtils

./: Cargo.toml  crates-io.md
.github/workflows/: build.yml
cenum_utils/: Cargo.toml
cenum_utils/src/: lib.rs
cenum_utils/tests/: mod.rs
cenum_utils/tests/common/: mod.rs  simple_enum.rs
cenum_utils/tests/const_access/: count.rs  discriminants.rs  mod.rs  names.rs
cenum_utils_derive/: Cargo.toml
cenum_utils_derive/src/: lib.rs
cenum_utils_derive/tests/: basic.rs  no_repr.rs
