[package]
name = "cenum-utils-derive"
description = "Derive macros for cenum-utils"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition.workspace = true
rust-version.workspace = true
documentation = "https://docs.rs/cenum-utils-derive"
readme = "crates-io.md"
repository = "https://github.com/Josh194/ConstEnumUtils"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.95" }
syn = { version = "2.0.101", features = ["extra-traits"] }
quote = { version = "1.0.40" }

rustc-hash = { version = "2.1.1" }

[dev-dependencies]
# cenum-utils = { version = "0.1.0", path = "../cenum_utils" }

[features]
default = []